--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <h1> helooooooooo </h1>
 <h2> How are you </h2>
-<h3> I am good </h3>
-<h4> hiiiiiiiiiiiiiiiiii </h4>
+<h3> what are you doing </h3>
